--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   python:
@@ -9,17 +9,24 @@ services:
       - .env
     volumes:
       - .:/app
+    working_dir: /app
     command: tail -f /dev/null
 
   streamlit:
-    build: .
+    build:
+      context: .
+      dockerfile: infra/docker/python/Dockerfile
     env_file:
       - .env
     volumes:
       - .:/app
     working_dir: /app
     environment:
-      - PYTHONPATH=/app  # <--- important pour que 'src' soit importable
+      PYTHONPATH: /app
     ports:
       - "8501:8501"
-    command: streamlit run src/command/run_streamlit.py --server.port 8501 --server.headless true
+    command: >
+      streamlit run src/command/run_streamlit.py
+      --server.port=8501
+      --server.address=0.0.0.0
+      --server.headless=true
